changes to nextflow.config, conf/base.config & conf/igenomes.config to accomodate locally produced files. Changes made subworkflows/local/prepare_references.nf & workflows/tomte.nf had to made to avoid errors to STAR_ALIGN and to activate ENSEMBLVEP. Both problems stems from using local files rather than building from scratch which is the default.

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,8 @@ params {
     input                      = null
     // References
     genome                     = 'GRCh38'
-    igenomes_base              = 's3://ngi-igenomes/igenomes'
+    //igenomes_base              = 's3://ngi-igenomes/igenomes'
+    igenomes_base              = '/fs1/resources/ref'
     igenomes_ignore            = false
     save_reference             = true
 
@@ -252,7 +253,7 @@ manifest {
     description     = """Pipeline to analyse RNAseq from raredisease patients"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version = '1.0.0'
+    version = '1.1.0'
     doi             = ''
 }
 
