--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -25,16 +25,30 @@ params {
             blacklist   = "${projectDir}/assets/blacklists/GRCh37-blacklist.bed"
         }
         'GRCh38' {
-            fasta       = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/WholeGenomeFasta/genome.fa"
-            bwa         = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/BWAIndex/version0.6.0/"
-            bowtie2     = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/Bowtie2Index/"
-            star        = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/STARIndex/"
-            bismark     = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/BismarkIndex/"
-            gtf         = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.gtf"
-            bed12       = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed"
-            mito_name   = "chrM"
-            macs_gsize  = "2.7e9"
-            blacklist   = "${projectDir}/assets/blacklists/hg38-blacklist.bed"
+            fasta         = "${params.igenomes_base}/hg38/fasta/GCA_000001405.15_GRCh38_no_alt_analysis_set_nochr.fna"
+            fai           = "${params.igenomes_base}/hg38/fasta/GCA_000001405.15_GRCh38_no_alt_analysis_set_nochr.fna.fai"
+            sequence_dict = "${params.igenomes_base}/hg38/fasta/GCA_000001405.15_GRCh38_no_alt_analysis_set_nochr.dict"
+            bwa           = "${params.igenomes_base}/hg38/bwa/"
+            // bowtie2    = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/Bowtie2Index/"
+            // star       = "${params.igenomes_base}/hg38/star/"
+            star_index    = "${params.igenomes_base}/hg38/star/star_hg38_nochr_index_2.7.8a"
+            // star          = "../igenomes/Homo_sapiens/NCBI/GRCh38/Sequence/STARIndex/"
+            // bismark    = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/BismarkIndex/"
+            gtf           = "${params.igenomes_base}/hg38/annotation_dbs/gencode.v38.annotation_exons_nochr.gtf"
+            bed12         = "${params.igenomes_base}/hg38/annotation_dbs/ensembl_genes_38.sort.M.bed"
+            mito_name     = "M"
+            macs_gsize    = "2.7e9"
+            blacklist     = "${projectDir}/assets/blacklists/hg38-blacklist.bed"
+            // fasta      = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/WholeGenomeFasta/genome.fa"
+            // bwa        = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/BWAIndex/version0.6.0/"
+            // bowtie2    = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/Bowtie2Index/"
+            // star       = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/STARIndex/"
+            // bismark    = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/BismarkIndex/"
+            // gtf        = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.gtf"
+            // bed12      = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed"
+            // mito_name  = "chrM"
+            // macs_gsize = "2.7e9"
+            // blacklist  = "${projectDir}/assets/blacklists/hg38-blacklist.bed"
         }
         'CHM13' {
             fasta       = "${params.igenomes_base}/Homo_sapiens/UCSC/CHM13/Sequence/WholeGenomeFasta/genome.fa"
